--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,44 +4,44 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:ffa4Ygcb7p9xPe3Oa29xp7fjpHihvqyxAOm0nqoslybWTtcRd8OMXvBZ8+L7QJxp9FVc3hQE/BkW8uGBfDa2R+c=,iv:VIsYCHvMMAEn1EWH9fOHljglmEyBtfAz5Si3Hmx1JO0=,tag:pPx40J3rSnGLXUMgOac6sA==,type:comment]
-    #ENC[AES256_GCM,data:zM8g8P3q5erEsXIm1UDbQzm6vU5v9vW0lbPMErpPEA9w6I04ZvIsCZ4cx4I=,iv:B9gEf9LZapehvrFostk/fXyG6uSGCGLjz7eo0NdnPNg=,tag:n8fZxMtjn8i74BCDRT3bqA==,type:comment]
-    VIP: ENC[AES256_GCM,data:usZk72WkCi+ChSCNuQ==,iv:KUR0WwQ1Jt0pJtLz9zKk2tX0eO25gKtDH7cr1Uq4lWY=,tag:LWqwCq2ZSCXLEsnwMoiBRw==,type:str]
-    #ENC[AES256_GCM,data:CC/7VqriMvrgTe/GfktOs3N9Xqt8jLRhNFY7,iv:/X3OW6yGRllq92nudDyrTtOiXv1ArKiGCu5z6SVl86U=,tag:+nH3PET+URI4s1dg9jjCdA==,type:comment]
-    #ENC[AES256_GCM,data:5hN9thX6vhpcaLA+XmS0GznWIqDrkZmv7JXHxWpgq1e2puG2uxR+Id48/RbyEGZaH9q5N6BVu2TBlWyeRRqkp+gEMg1dkauuv6H++HbGc63D/B5m1XDHRoQ=,iv:3VA7nJhUg7YNUN8SBkWN53bBPXwatdcnIQK5dAkQAmk=,tag:HKDKIctUmjHFi+dZmPfYCw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:Xm7aUfOZfyViai1KuQw=,iv:fDlj6r5pWL/0z2j6edFm152XXK6gNkyIto3y1ZjE2xs=,tag:783QFTPks+upAzhE6dTJew==,type:str]
-    #ENC[AES256_GCM,data:sR7f4/jGUqMEoRZGUkNuQRTuZMxkwtz2fJZjubZkWD+WJw==,iv:tf/hj5hZaz/oT0Z8wtVe9G0xv+S96qI9+5AjcwE0sQk=,tag:vcqPls53mJcQ+deelsGIvA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:ZPjO3OUZAAO0XgP8bQ==,iv:4PGoS8AtyDzZcZPqGP3WSMs7PpDR6+ZPHRQqXmSgK5g=,tag:p5PbCimSO709lSjHYbwjeQ==,type:str]
-    #ENC[AES256_GCM,data:43gQdEay4/hPMukvoJJmQiBpZ9W6lnz3Ckg+oOwyTru1yzjF3DQgFYKbWOmtDMY=,iv:zskHdPZ0x86tbpSs4/9utYU8R+9gj0QNw+pOzeRX+mY=,tag:2tofog6TCA7ePgeoVovO8Q==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:BstKxwr2DUKWDRe3gG1I4DTQ0K60LoITE7vySyjMKQ==,iv:Sz85hb/fNo6s/mBCCeEw64RCsTb/CCZW9Y/7g9sz47w=,tag:mEFoIA66Eh4ykEj8Cz4tGg==,type:str]
-    #ENC[AES256_GCM,data:idJgGyzCdrCUblbVANEIh9kwEqTpZhpBdVWZwwKn56JDjQlV7ANsV/4J+4Li1HODZ3YjrvY8PC0VPFB91BDFNDYoYDRQngPHiuXwGy1uduq7Hg==,iv:54w4oX1USM9+Z+FA9WspLWWC5lYviR+Q0iB/R5br70o=,tag:dKpoeXzO5roI8yJyKluTQA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:cXRb0O5reVaLPQFNU5bU,iv:wkvg/bO9xsBPA48v0lqi2YJ6qSEWjWEX4H1enM+lCCk=,tag:Wj3sbOQfV9VsnmCdQaCWbQ==,type:str]
-    #ENC[AES256_GCM,data:Ul+uYo0Ak4zPVQkD3fKTsBlhQDwBnh8KuukPmiN701di,iv:AyhO3dFRWoFR1akr46NDhPA+Xc0vY/BUjeoeUVozTP0=,tag:+GtXBMJovS6VHwn9gA5u2g==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:fz6ukVfXFRmezYTk85Hc,iv:R6Vovf1mLUBePiSZmdgHzT54rdCpAFWgqM20HAxbxbU=,tag:U1/CPMvNBhx9m0MnP0QO+Q==,type:str]
-    #ENC[AES256_GCM,data:z7dOaxtOcItUCjQZ84Fx8GvjNKCLG47oHWAQRrVfUhELGACOhx2gnpExKQZ/IIhU/RaBl0DeKAARhWsaHlkZ9HMhNQub3FAm/3B9iNLDLOU=,iv:Lhe8BIf0EoTmt8YqiHX1shWQOaH2Bd5Q5R1cw5l/9uo=,tag:Mcpk68+jipBycmKcJMPOuA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:bbty+RM/gUt2WQxh2jWO,iv:bzHNVsFN4N2/UsdjrzMI9ITESSUCyUgj3BCyDJ4UQis=,tag:Kze8FJq4VGrlRuljzPgZMQ==,type:str]
-    #ENC[AES256_GCM,data:OQ9DRJZ6SEn0DzZmL9eSaidSV9FX7CVUIn4v3HFXV6u57VxpqkRX6OzraT6sJGaJ9nn16KarE8edpBAPJLJuwd+NrELmu5d8jUiJ9r4DeQ5eag63SN3c,iv:Kd3DjcvzpScqSvJQYM27zuaXXTxlfNkGPOHvII8iYKI=,tag:+bW7qZZQz3H4FOvUM1jheQ==,type:comment]
-    #ENC[AES256_GCM,data:yDOo7v687Xj7Xp39uVqVEayx1v+m/xZSg7z3Hb35r8gG2Qq6PtTg5MaBpBz9xbDwOC8vBvajFG8TXltHzHz4xpQXc/d0eGeThPwOJbifDoce6SIA4pH2qrDKEnJ93s97Nj5/U44pZqGkv2+mZwDFUwYnURI5V7fcXqPoOg==,iv:cDlSOFAHGSc07BxySKaOvihflyuP4ZgR9Q5ERm12IvE=,tag:nkLvHcTcosCxlSirUyMRGw==,type:comment]
-    #ENC[AES256_GCM,data:gCFbdqyLVY7c9YsgQv2xO/lTM4mmDy4aFK/ym9NgH0NKpJl232/EsMmihfo3Q4PeCEVZncBPp5eQC2Yhyrp4VBHaLPizmZVrLuQWpkV26pU=,iv:rFLrdt+FS88o+60TRDkOVdEpRW7PRS+DDgkTdUjmqfY=,tag:VnhDNwnKbbHArVh9pBhCmw==,type:comment]
-    #ENC[AES256_GCM,data:EgEk8EgEfL/ia0YBbZAKEpttHOna7a9DdLgWUb5SzFes/VJZxaPtZsaoRoYV/lfwvrxj3VgB,iv:26/bQakmzX9HMG3QhSAb/vxXU72ocmOP1+GaqLdCKk8=,tag:7OfdmN99+82c15A5TSrJIA==,type:comment]
-    DDNS_URL: ENC[AES256_GCM,data:YvBU5iNfx7pAP0EkXSY=,iv:c48Q6FGE/8/BN/QLkzf5h8BFPW4kW4RboE6CRolqFkI=,tag:P8bqezaeP/Pg5LdKm1zODw==,type:str]
-    DOMAIN_0: ENC[AES256_GCM,data:stfCfm8Gm9Hh/buv,iv:JVyE/FnM18frPBMo7blleDWgcCHIjfTvIGASsgR8iYs=,tag:REzZXVwlaKTW5Khemh9ayg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:pOu/4RLASIpPiiPCtbLFU3g=,iv:F3OftVjK7ae/eu1BdHVUD4tglOrfumVIE2tg/iK9KLU=,tag:hDSHU95LH8m/oL2XKw1UTg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:piLjOzDIq43JaH5KjHdyPFDBF8ku5JJNACLSKYlh4sM=,iv:jtzG08q3d5qwmf0aexMJiFpJjClfFJVG6rookxX+Af0=,tag:zJIKq4juC/zdWOj50H9FDA==,type:str]
-    #ENC[AES256_GCM,data:6LlYXMpxU3BkfvJXiBk0KnBOj4Z1xu6wkijADxpuY42yySRyngO6KQMwpi6wH52n4aA7j69lguHNWkRhdl/Sbnej9g==,iv:c72iCMnXkNlOtcVU3dupa+4UF4E/y7QFfhDheX33t/U=,tag:nTarWpk+k/jTGPakeIBl8A==,type:comment]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:iaFVPPtdpO3dy4g4kXgqHOIxRiiZf8C0WG03V9I8iFIZFq4lgQ==,iv:yjaitDycQy38D6xJHZj0vBuLo2FES6rtOjIReUNAgt4=,tag:vW9Pb9Scliwe0Eptr2R8Cg==,type:str]
-    #ENC[AES256_GCM,data:vjIeXj3LhjIAPFWB5CM5mmGXjJRfBVsjWS5cyUwP93yFCEKrMTPmnk6A7oZoiclqlzSZUofozi4=,iv:m12niXzeiu7Xo7i9dRo1uyYE2cvfhz1vej6E2vW5OTA=,tag:O4+x1UFzP9wWosm2rGXCiQ==,type:comment]
-    #ENC[AES256_GCM,data:BNRwDKf6oP26xotjrPEdJYzZZIeYHnalRA==,iv:7ZcqcGBop1JG4VFzV+QUcR4EbVPPxgbWHAnxxZUcDj0=,tag:DN3aIquACR+8XD5fGB496Q==,type:comment]
-    #ENC[AES256_GCM,data:qPYWDWhqhBh5HrKmv1TMKXOZF0Ywbblh9ROw8V+G2mO6OX4RwxrYxdLz5Rq4grozFcyW+04ZSO8PzBztcqf4aWuSV8CT5llt/G8dbPE=,iv:XoGukHXMBmr738stj1WT6rm5js267wtGOfWimsIo9Bw=,tag:2r3kuENbFhyhIY/lshumvA==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:cPW80rYTFeJBsMXaJv0uOPVfwP76hDQCdbgg+26LoQIog8/xsq5DLKmdwkHGYo/a,iv:3Zv+RmLbO9X0cM/Q+ilOANHvsugxYHGMkZH4WT3mSZg=,tag:AFE3LwG/kpuUh7Gb2bgQ9w==,type:str]
-    #ENC[AES256_GCM,data:rx4eOaio3Zw+qg2KQ365yw1PkVJAVTMoPYI2yp5wXpdT9JRlRPpOmbnm3HJYEmzJDqO7s5GLC3eUvNR8DE7r3BLLNG018nY=,iv:dbLG2wlXyUa/l9ZvfA00iJc4iOdqBwnRD3ttWdjXCH0=,tag:FLSP/fu2SG2tOLQvHlLYMQ==,type:comment]
-    #ENC[AES256_GCM,data:UHxkRzJv8uyIR+Q5FNC3T1/OVyOBE9LnW/HHp85Rg0NiGDCMKha/knCZipb9jAjp/ytLu3bt,iv:VVmLk5AGXrpnKDeO54fDGbqd166P5dsJVGCJ8nvzwus=,tag:CnR61mH6jX3t8iaD7FmAKw==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:lIII4IU07g==,iv:oLGKyM9ALmC1kLB5Pr//PKh1QTImGnD64EPf/6JKmaY=,tag:3CfighvlR1yebnKNXPp02g==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Q13y8Bmbr7Stmgh1GhRSSnK71c8=,iv:h14ZDWVe3gREo0fI9PquHP3p2CDhxZtIkWE2t7zErgA=,tag:iAuBS7CQCuP8JxGHErK//A==,type:str]
-    #ENC[AES256_GCM,data:P9BUjHgxXy8gI0XIO/4=,iv:djTBLp9EoN87w+2VuCdeX3NOqVMY9Pc+GASqpIPq3ug=,tag:nYN88iirh/ubthhnljqCZA==,type:comment]
-    PODNET: ENC[AES256_GCM,data:+GIdoEHaJY+yhGdvyg==,iv:VL4K168zXj8I3QwmWZts6/eae9QFJgSBOCkBXT9tN38=,tag:0U1OSqK43OUw0wUINS1sYw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:5lf3HoKLuj0AgzNFQg==,iv:nxTt6oh7CYDHDbQcuwso5EiOqgF6QtWaRxDaqGoBVx0=,tag:d9IXtAXCNSDHMl5PiHZ36w==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:lAkEiA==,iv:hQzO6xcVzT/x2+Freeh80KerdRXrDmvZw7y06twGPUY=,tag:8DreBkuA9E1zf1+aL/Q70w==,type:str]
+    #ENC[AES256_GCM,data:277okJpies30UYde3Rk/Oi96u3ac0VEGs121vT188kL2RKHUozVMLVsDmitKtQKohEZ4ZmLZNHzvCBlIiIxzNsQ=,iv:cldCyARjplDS3x316LYXkNjHu63C5LLnxDZF75I+CPU=,tag:6+52ZjfEJdOFM7IPB7dBDQ==,type:comment]
+    #ENC[AES256_GCM,data:3aWOEI6+7JI7GLTz2Ud+LK17k65Lmi7157NnYNrchq9giCNJO8NZT2V0Dls=,iv:M586GLJoi5SwlEEJtp/9hLh1EUMZn2NxoPv6PplAgiM=,tag:pyhXryDYR7P1tcUHEwwHuQ==,type:comment]
+    VIP: ENC[AES256_GCM,data:5ELn2iQBT9K/CN1UwA==,iv:4dCTiJ8DY8nWbh80+4ApduDyG7J3VLK9suMfxpCIUiU=,tag:OiZp+NBVY7H7t4v1v3khAA==,type:str]
+    #ENC[AES256_GCM,data:D6gYNLumn4k6qE20si8PUG9LTnPW8U6kwFJv,iv:f0OmDY91WhVqORYIQRAAgfef+gAH2eDh5ETokUl/Hhs=,tag:bsSqceIah4vy+p2/Fx+74Q==,type:comment]
+    #ENC[AES256_GCM,data:z7Gi8w0bPOJ3WVlNwQFtD+L+YBva1H6ChezHRGYGc/mXZo5S1cDSohhr1MzawyKQMRiVcQ5fEiufVDKGUpW2HLk6zjjsDYLXQgOmqYxgkt7swEySv+7ZdXQ=,iv:rEgrcAjsgoGSHywR1zdulZ8wfffBfvnVPXvYsFfkf50=,tag:4/LL3hS166SxpUKeHknKmw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:6apOmT0316r2U0gcE0g=,iv:TlJp2Ql+RCT723hl26htBAqJdrRAQOVb4dH9uvI5df8=,tag:zRx/lzJH9/j9WHUQPDCxMw==,type:str]
+    #ENC[AES256_GCM,data:W0MeigCW8RFO7YYeQzOvy2gkQK7liwtDf6nrh/dnzMQkTw==,iv:Ae8RluppLtbPRBYgNGdF2GjR+tj/5Cl2BBUU2KQuAZo=,tag:mme08hE1v2VDEc9blxAPRA==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:N6goA68znqihZcF7cA==,iv:PBjYou4dpnqWG3xV5kLMU849bfohhiFbnEpUmR+klWo=,tag:gU8Iqh5F1L5bwL+Ej2tZhA==,type:str]
+    #ENC[AES256_GCM,data:R8X+vn0siKRdoZqWeOdP8RrGpYiPEZB2gTMMh5mh/kKF1TCYqeiBQzltcbfAIxo=,iv:7U4Pw15EbaMRbDOjiWsU0SroEyD7oMNqf/c8daYanPk=,tag:YVkvJupG7pr3Db1mM6yhKg==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:ZcCII6AdjoR70LYF+PH1nesGUMg84yg9ZnMg6jxrKQ==,iv:gA0+/gY4TfjDcuSY+219Ju8E/wD/ua19oFLVHIsjWLU=,tag:6dpQ9wFU+QuEgtPwH0VrvA==,type:str]
+    #ENC[AES256_GCM,data:4nf5/2KqU0Ny694mlZFSbAgbR7VLpcnFAIVn382C9XK3vCGYkxVnFPpF7fHI+iISn1CeJbBY3rW/EUJCY/R+cbZC2UTb1Z36bxklC0eS67T88w==,iv:6NBUlOjiUvmZRowDyeYna3XfeP4WDOnbCc6apOkrxUU=,tag:jWYbPtST97046d2s7rhvgA==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:FeN/nmMEggGqT2XpN46s,iv:QwasSnFZW9800c9CmIHyZu6v/z8HqtiP2+bOjKwtHRY=,tag:WVPVuo7A9Fj99yqUWvL4DA==,type:str]
+    #ENC[AES256_GCM,data:Xdtbb+ZQbgRMMDHNVYaz4cwp7Kj4M9wNOu9e/eVDV2qC,iv:Nk411VAR91cjw/FfxYL2i1wKv+63W6UvAbDIE2WUWps=,tag:nK5M+uWmjBtfD3vC6t7vcQ==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:KzqGIRSEHzPbI/TCk5SD,iv:ocXHGzACrq67RiGRANroJew43mv6uX8MndaZoLQbKfs=,tag:mEb9ln0+TdrdxefdIsZj9w==,type:str]
+    #ENC[AES256_GCM,data:JZdqzp0dx0kE5XBUH9PvKR2iRlShMX0SrU3kECMpiR/PjvuwWvXgVuoi30yJlbeAts5qZSO5GOUYef3LjHEh5zy9OxE8qKA4XKivzPaRbAI=,iv:8FG/agJ45dnN1U3fIMeTJol1M4B1vmat7Tn5KVuc+eM=,tag:ao9gxqsLp8Dq5kOtMjZ1CQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:6CNzfe8g3tbnep9pgiZ1,iv:oE44v3lHK0zBntwFMCwb+mclorofvvGSo7CmRoPitKE=,tag:psVB2Ljlifr5RgIe3kXMnw==,type:str]
+    #ENC[AES256_GCM,data:5vXQulam51wK5teRReMZt4XbQCqci/G8hnVvalLGcl3EAhnXgZkyrfwDpgx3E0NV4R4J+4oxZfYUyUHS2CTPlEgNNjogQ8tisnVP2hzvtdMjuEOe0nmQ,iv:19HGgD1GHV8A/Pn0wlzfQ/OpuHAYf5Crr5NTkQzL2Os=,tag:P0n/m11YLuMxxo91/cHT4A==,type:comment]
+    #ENC[AES256_GCM,data:X6Rf23pncXgjQR8skgrBu/Kt+p8gl4gfaHMaVoOIUHsyh4kxsHugO7M59lcUYaxJYtiVA1Bm4R1GPSO5Vo/OzzhRiJFLXKGR23IPBgUnHY5vJTutxV59rUjMsKr/BoSFUR6s2G541TJyuJEiYi/CxJC1AUtnUlhr/Yq8eA==,iv:upFeMDu44AfkPu5RYiAwHLThesT58gZrlL8n293ELV0=,tag:RJgroc1psFNe7+7wQfGu5g==,type:comment]
+    #ENC[AES256_GCM,data:kGaYbfxkRG71qcMUT0y6iEZhdfvhp90uSRvsIBcaNDTc5pXpTby1xacGmdHSwMfxLIqgoY1xL92q9iQ1jB7jlHS7jszPzFYXqOX4lJj5TH8=,iv:5cLEnY8q6rRvADBp9YWNPJ9QPhzJ+dnY/EByuNslXqw=,tag:4iJ3dXj5aZqYnTO/j0iEyA==,type:comment]
+    #ENC[AES256_GCM,data:3srguw8OFZUZ/cPUvWaw2Gt/kdpwInVti6VTN3Al9lhdiwamv7qI65D0EBW+b7XDV5gME9b4,iv:XDDV6uBe3fr+UF7i5Vx418aFQNEvOpR/yMX0K9agVKY=,tag:3uuEFf9SnCZO3CDKch2zvg==,type:comment]
+    DDNS_URL: ENC[AES256_GCM,data:iwgR+qmf8Lw8xwJk9ck=,iv:ZnrFR5HjD+SGLArFfCiS9qA6OnANsurTLY/QtLSEj7E=,tag:WARVln1KbXl6H45aUavZ2A==,type:str]
+    DOMAIN_0: ENC[AES256_GCM,data:H0XbosobIGLDiG3u,iv:vyA7PQBFc5fS+omXPCoQsySooug0NV4XnFkFQWsVbMU=,tag:MMCV/iziwc43f2QnX33FOg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9b9VLCAskZ75iKd1tyHar9s=,iv:Nn1EMpWHpxCDEEt4B931A8R8GwxE2JXajSqKrdgxeIc=,tag:JNxZnnMUY4WaKy6SdPATrw==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:8CpgPjFNydG/f1/nxVl1SpK8Vc/byNSHCnB2wUzfJJg=,iv:pjzNvf0flVaD7gKQGPJG73q+FWwcykewBqrzPFgiD3M=,tag:NyxgnlDprBejGpDBJAnRxQ==,type:str]
+    #ENC[AES256_GCM,data:q2LJYY70EBsQK5tdE4V4cZZkgwhw5MeBz+Qavbq4+EZCQFyRWFka3H7/5/ElGqI6dnZ5I2+U6a/CpM+8AujA2wLArA==,iv:ZHtxe6J4UVx4yg8Jrl75WGPpdGRV/h/VmOohoHmYSco=,tag:LpN3Yh6EkLeSveb8Gr9J6w==,type:comment]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:v7TUN6O8keHK3Jcx9cDCLbt49FmJDwJXsze2gOSdj5ClSMZ5Zg==,iv:erbAUnerKXzQKjA5LE1Jd1A1ycR/MOLEaGBSAFJu8yE=,tag:9mqXelVQna3WNtD9ABy/Rw==,type:str]
+    #ENC[AES256_GCM,data:PpUDiF6mE0pXIyEwDMT9ojvc0pvHE3QWrrEGeancVJC9CO0MLgGGo/p5HgfKcfDd1SL+wdC6xT4=,iv:WnkFy/DnNo5Vc7h1u6xetVrP7VRX1oRA9kKRiDkKuuA=,tag:XQtN/3s61M/B7Kz1f16zvQ==,type:comment]
+    #ENC[AES256_GCM,data:UBeAy7jTgc7gjgx12SphdN/oD5fxlgK4eg==,iv:vuB/B+WJ3gFzyf6DhnU1GKuPPMgeQSplQnKfyhIq+s0=,tag:QggIqIy/ul3Oxp/shXuW2g==,type:comment]
+    #ENC[AES256_GCM,data:4lUZOLQftL5hrLrjhDXQpFEVlN8zZD7oPBokCauikbCVc9bY87seS1G0BEabOIu2eXbrzv9Q28Kka/K7KKXIrQ0XSJTAkuSvYve33M8=,iv:e22LZ60lChfSG4hz8Qssjhk205dFheLUIUbMV6Gt2ww=,tag:j0uJlmrfhncx+FmRqDl4WQ==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:9q4KXzAJLIyhbqDUmudpk35lUkf18RKZ90fmcp7ERtKYjZGaBypkyID/EqCpJmbW,iv:u+zsMpaePEkMhfe3/iZhwzNw9PtLTyGI/FlMtxSWroE=,tag:32cmw0qChz8ReuLz4ua3mA==,type:str]
+    #ENC[AES256_GCM,data:0LjKkP4ZXafuKKulnL47xXBA4FbNL9iXBIzTNnIohomwDethcyIP3PgiiTGEZNej1sujmARTlmV4JfNU+WniXWdResh4XfM=,iv:ywavDOzIqKOiFy5Hq84OgtHHk+KKSMV7ZPkY3kyVMck=,tag:cDKo+AiXF8g3B2QQPmugcQ==,type:comment]
+    #ENC[AES256_GCM,data:ccpwWiUy8FT1x/9kbY+SIh4EXh3Ft6ZQxaxDXuuxUILa2/brSxGkbQJ6XCV6zNW06bfJN/5I,iv:TYyVT+87YzrY2nte5dLBMbnWTis26vV5sI9o6hr8i7U=,tag:sf7aIby9PAYbA2ma+eqU0A==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:aq2GgU3xQg==,iv:T/JTM0Ivbb+oh0P0a7U9uu9cpAVMK5bzN2CcbOpt23M=,tag:TRk1s92Pq8evYoJWDs+3xw==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Iq9jorGwgZJ4vwEyh2hB6+Gd1v8=,iv:ybA2zeA7Q875pb2zx39ExiHVO57PNruz9WfzfbDtCGw=,tag:xg4y9elM+JUSktgMq3wAtA==,type:str]
+    #ENC[AES256_GCM,data:NmMptSl3ROMtW3KGBic=,iv:tOblc7/JViBe43DShuGqXuIj+6So9hixsAuyfegsj2w=,tag:7MolqBsnv7FJHYfIkcZpEg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:y5NWwXqM4VJa2g/4cg==,iv:xFjxx65eyfqqkVxlvJA891pKfoQ4BKltH+yDI5Hw1Is=,tag:As1qweP5YFM1SE6bXyzSDQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:S/+X5W3iEZ62bP83sg==,iv:3XdUBV3aUW/x9me9gRMI3rZrUv15jxJ+3o5jCOUwUq8=,tag:4cqq7spyFuGqIX9JH8PupA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:0xeQIQ==,iv:VRJy2xQPZLKysyU+hygJjJT6UebwVrOrCOoe+P4/LHI=,tag:c0t/Mb62oAwgMKSkA/Iy1g==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -52,14 +52,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA3RzRla2x0dnNwemZlazgz
-            U2Z6bFlnekk0Y2E4S2ViRGgxUXBmUGx1L2tZCnoyMUg5TGdtM0dPOGhyMzBjSExm
-            b0YyejU4Nk43VDNwWnJtbmIxNERxRmMKLS0tIGplNzQ0cERiTDA0eGttS1c4MlBj
-            Z0xmeVNIL2pOMlc5bUhsZkNNNm9BY1EKE7lHVipomr1svI/GrtecmUbgfgwuhg6K
-            MhRFoNaQXgfEWXdyf1MH/rvqJKwQ8WT48g3Nl3T4JHRrtPz1YzWLvA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBzMjl0N2RkTGNBNFlMNTdX
+            MXhnaDlRZjRVR01Va0VycU03aWFLb0o3QmxZCmYvYmVXTTlOWnRPYzFHVDhOWVoz
+            TVZIbEUyZVVXdGtjU0ZmRDBiQXN2bkkKLS0tIFJtaG4wb3podTFlN0c0UnlBSlNn
+            WkFDaUc0eUNJOWZFUjJPMk1iSE1tQVkKa/p/irn6tepGij2eYv+nRccXbKW+EaCw
+            ep9Z2jhgdZLg61c0UUCWAxP6QCwRP5iK6F6lcFsedJjQyu59cT+9lA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-01T18:31:42Z"
-    mac: ENC[AES256_GCM,data:SJ3tmsuroX3bnruZtDHo49jCT7drI4OQvoXpo4T4ACAG1yFgFiL7J3P0t5o8RA4jgOWpNEwXaSNY+F/flsvOtBLiWjgdWJFuvHEN0VU/60Spy1WHCEoQFb3yeEsba5x+F4u2w4WB6EVA/yOUgBaWUftAUWyl8DDgvTdy4q7UUNg=,iv:cm03q067LCx/ipZbKp20rAHwQ75Qw289Y4Sbcute6SU=,tag:wZQ8dQZwGWEd5Q/kFc5Umw==,type:str]
+    lastmodified: "2025-01-01T18:39:26Z"
+    mac: ENC[AES256_GCM,data:yqfDxP5CoLA0VqsSERuW4M89ROT+dLHqClZM+U6kSyd50gVVkx568oRV9fqm7eAFvaNmO2GKRCzcuDExl3YY0pGBMME2O0+r07MIhEPmxHzGuCIhN7SfM2pI9i53bvLG45XgT2tPWfrHGJ22KG1IDI9oBBWqG3yuPpzdzITHR/Q=,iv:VhLpH+awM1siQed6akOSDf4Zmdh3oL2CPdWY0xFcf7M=,tag:qc1HjPwgq1yEDR8QR3LfMw==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
